“fixing spacing issues on mobile”

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -7,10 +7,10 @@
     flex-direction: column;
 
     .main-container {
-        display: flex;
+        // display: flex;
         min-height: 100%;
-        flex-direction: column;
-        flex: 1;
+        // flex-direction: column;
+        // flex: 1;
 
         .main-content {
             flex: 1;
