--- a/src/components/PostSuggestions/PostSuggestions.scss
+++ b/src/components/PostSuggestions/PostSuggestions.scss
@@ -4,12 +4,10 @@
   display: flex;
   flex-wrap: nowrap !important;
   justify-content: space-between;
-  // background-color: #fff;
   width: 100%;
 
   .post-suggestion {
     display: flex;
-    align-items: center;
     margin: 0 0;
     color: $md-secondary-color !important;
 
